--- a/final project/homepage/style.css
+++ b/final project/homepage/style.css
@@ -298,6 +298,7 @@ p{
     @media (max-width:768px){
     .hero-left{
         min-width: 50%;
+        width: 100%;
     }
     .hero-header{
         font-size: 2rem;
